--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta charset="UTF-8">
     <!-- http://proger.i-forge.net/The_smallest_transparent_pixel/ -->
     <link rel="icon" href="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=">
+    <link rel="stylesheet" href="static/css/style.css">
+    <script src="game.js"></script>
 </head>
 <body>
+
+<div class="navbar">
+</div>
+
+<!--<div class="score"></div>-->
+<!--<div class="time"></div>-->
+
+<div class="board" id="board">
+<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
+<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
+<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
+<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
+
+    <div class="pocoman"></div>
+    <div class="ball"></div>
+
+</div>
+
+<div class="popup"></div>
+
 
 </body>
 </html>
