--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- http://proger.i-forge.net/The_smallest_transparent_pixel/ -->
     <link rel="icon" href="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=">
     <link rel="stylesheet" href="static/css/style.css">
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
 </head>
 <body>
 
-<div class="navbar">
+<div class="navbar">Hello
 </div>
 
 <!--<div class="score"></div>-->
@@ -28,6 +28,10 @@
 </div>
 
 <div class="popup"></div>
+
+<div class="game-field" data-cell-width="16" data-cell-height="16">
+
+</div>
 
 
 </body>
