cell size problem solved

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="popup"></div>
 
-<div class="game-field" data-cell-width="16" data-cell-height="16">
+<div class="game-field">
 
 </div>
 
