Add move counter and restart button

--- a/index.html
+++ b/index.html
@@ -10,29 +10,17 @@
 </head>
 <body>
 
-<div class="navbar">Hello
-</div>
+<h1 class="welcome">PocoMan Light</h1>
 
 <!--<div class="score"></div>-->
 <!--<div class="time"></div>-->
 
-<div class="board" id="board">
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-
-    <div class="pocoman"></div>
-    <div class="ball"></div>
-
-</div>
-
-<div class="popup"></div>
-
 <div class="game-field">
-
 </div>
 
+<H2 class="keypressCounter">Number of your moves: 0</H2>
+
+<button id="restart">I'm stuck! Let's start over!</button>
 
 </body>
 </html>
