--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
 <head>
     <title>Javascript Game</title>
     <meta charset="UTF-8">
-    <!-- http://proger.i-forge.net/The_smallest_transparent_pixel/ -->
     <link rel="icon" href="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=">
     <link rel="stylesheet" href="static/css/style.css">
     <script src="game.js" defer></script>
 </head>
 <body>
 
-<div class="navbar">Hello
+<div class="navbar">
+    <h1>PocoMan</h1>
+    <button>RESET</button>
 </div>
 
-<!--<div class="score"></div>-->
-<!--<div class="time"></div>-->
-
 <div class="board" id="board">
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
-<!--    <div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div><div class="grid-item"></div>-->
 
     <div class="pocoman"></div>
     <div class="ball"></div>
 
 </div>
 
-<div class="popup"></div>
-
-<div class="game-field">
-
+<!--<div class="popup"></div>-->
+<div class="back">
+    <div class="game-field"></div>
 </div>
+
 
 
 </body>
