Make building blocks bigger, and more pretty

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
 
-<div class="navbar">
-    <h1>PocoMan</h1>
-    <button id="restart">I'm stuck! Let's start over!</button>
-</div>
+
+<h1>PocoMan</h1>
+
 
 <div class="board" id="board">
 
@@ -21,15 +20,11 @@
 
 </div>
 
-<!--<div class="popup"></div>-->
-<div class="back">
-    <div class="game-field"></div>
-</div>
+<div class="game-field"></div>
 
 <H2 class="keypressCounter">Number of your moves: 0</H2>
 
-
-
+<button class="button-restart" role="button">I'm stuck! Let's start over!</button>
 
 </body>
 </html>
