--- a/index.html
+++ b/index.html
@@ -13,15 +13,9 @@
 <h1>PocoMan</h1>
 
 
-<div class="board" id="board">
-
-    <div class="pocoman"></div>
-    <div class="ball"></div>
-
-</div>
-
 <div class="game-field"></div>
 
+<H2 class="highscore"> </H2>
 <H2 class="keypressCounter">Number of your moves: 0</H2>
 
 <button class="button-restart" role="button">I'm stuck! Let's start over!</button>
